--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         that convert into real business opportunities.
       </p>
       <ul class="info">
-        <li><b>Email:</b> aamirsinfo@gmailcom</li>
+        <li><b>Email:</b> aamirsinfo@gmail.com</li>
         <li><b>Phone:</b> +92 306 3337925</li>
         <li><b>Location:</b> Bahawalpur, Pakistan</li>
       </ul>
@@ -274,7 +274,6 @@
     </div>
   </div>
 </div>
-v>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
