--- a/index.html
+++ b/index.html
@@ -225,55 +225,47 @@
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
 
-  <!-- Top Contact Info -->
+  <!-- Top (Logo + Columns) -->
   <div class="footer-top">
-    <div class="contact-item">
-      <i class="fas fa-phone-alt"></i>
-      <h5>Phone</h5>
-      <a href="tel:+923063337925">+92 306 3337 925</a>
+    <!-- Left: Logo + Tagline -->
+    <div class="logo-col">
+      <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
+      <p class="tagline">Designing Dreams, Crafting Reality</p>
     </div>
 
-    <div class="contact-item">
-      <i class="fas fa-envelope"></i>
-      <h5>Email</h5>
-      <a href="mailto:aamirsinfo@gmail.com">aamirsinfo@gmail.com</a>
-    </div>
+    <!-- Right: Contact + About + Resources -->
+    <div class="footer-right">
+      
+      <!-- Contact Column -->
+      <div class="footer-col">
+        <h4>Contact</h4>
+        <ul>
+          <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i> +92 306 3337 925</a></li>
+          <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i> aamirsinfo@gmail.com</a></li>
+          <li><span><i class="fas fa-map-marker-alt"></i> Bahawalpur, Pakistan</span></li>
+        </ul>
+      </div>
 
-    <div class="contact-item">
-      <i class="fas fa-map-marker-alt"></i>
-      <h5>Location</h5>
-      <span>Bahawalpur, Pakistan</span>
-    </div>
-  </div>
+      <!-- About Column -->
+      <div class="footer-col">
+        <h4>About</h4>
+        <ul>
+          <li><a href="about.html">My Story</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+        </ul>
+      </div>
 
-  <!-- Middle Links -->
-<div class="footer-mid">
-  <!-- Left: Logo + Tagline -->
-  <div class="logo-col">
-    <img src="https://i.postimg.cc/rFKm8KLN/Purple-Abstract-A-Letter-Free-Logo-removebg-preview.png" alt="Logo">
-    <p class="tagline">Designing Dreams, Crafting Reality</p>
-  </div>
-
-  <!-- Right: About + Resources (Grouped) -->
-  <div class="footer-right">
-    <div class="footer-col">
-      <h4>About</h4>
-      <ul>
-        <li><a href="about.html">My Story</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h4>Resources</h4>
-      <ul>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="privacy.html">Privacy Policy</a></li>
-      </ul>
+      <!-- Resources Column -->
+      <div class="footer-col">
+        <h4>Resources</h4>
+        <ul>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="privacy.html">Privacy Policy</a></li>
+        </ul>
+      </div>
     </div>
   </div>
-</div>
 
   <!-- Bottom Social + Copyright -->
   <div class="footer-bottom">
