--- a/index.html
+++ b/index.html
@@ -398,5 +398,22 @@
       });
     });
   </script>
+  
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const seeMoreBtn = document.getElementById("seeMoreBtn");
+    const hiddenProjects = document.querySelectorAll(".portfolio-item.hidden");
+
+    seeMoreBtn.addEventListener("click", () => {
+      hiddenProjects.forEach(project => {
+        project.classList.remove("hidden");
+      });
+
+      // optional: button hide kar do
+      seeMoreBtn.style.display = "none";
+    });
+  });
+</script>
+
 </body>
 </html>
