--- a/index.html
+++ b/index.html
@@ -160,10 +160,9 @@
     <span class="close">&times;</span>
     <img id="modalImg" src="" alt="Project Image">
     <h3 id="modalTitle">Project Title</h3>
-    <p id="modalDesc">Project description yahan show hoga.</p>
+    <p id="modalDesc">Project Description</p>
   </div>
 </div>
-
 
 
   <!-- ================= STATS ================= -->
