--- a/index.html
+++ b/index.html
@@ -130,22 +130,22 @@
     </div>
 
     <!-- Hidden Projects -->
-    <div class="portfolio-item hidden" data-title="Project 5" data-desc="Description for Project 5">
+    <div class="portfolio-item hidden" Aamir Shahzad Facebook="Project 5" data-desc="Aamir Shahzad">
       <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
       <div class="overlay">Click to view</div>
     </div>
 
-    <div class="portfolio-item hidden" data-title="Project 6" data-desc="Description for Project 6">
+    <div class="portfolio-item hidden" Aamir Shahzad Twitter="Project 6" data-desc="Aamir Shahzad">
       <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
       <div class="overlay">Click to view</div>
     </div>
 
-    <div class="portfolio-item hidden" data-title="Project 7" data-desc="Description for Project 7">
+    <div class="portfolio-item hidden" Aamir Shahzad Instagram="Project 7" data-desc="Aamir Shahzad">
       <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
       <div class="overlay">Click to view</div>
     </div>
 
-    <div class="portfolio-item hidden" data-title="Project 8" data-desc="Description for Project 8">
+    <div class="portfolio-item hidden" Aamir Shahzad Medium="Project 8" data-desc="Aamir Shahzad">
       <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
       <div class="overlay">Click to view</div>
     </div>
