--- a/index.html
+++ b/index.html
@@ -192,22 +192,29 @@
 
   <!-- ================= REVIEWS ================= -->
   <section class="reviews" id="reviews">
-    <h2>Client <span>Reviews</span></h2>
-    <div class="review-slider">
-      <div class="review active">
-        <p>"Aamir helped us scale our business with targeted leads. Highly recommend!"</p>
-        <h4>- Client A</h4>
-      </div>
-      <div class="review">
-        <p>"Professional and reliable freelancer. Exceeded expectations!"</p>
-        <h4>- Client B</h4>
-      </div>
-      <div class="review">
-        <p>"Amazing research skills, delivered quality results on time."</p>
-        <h4>- Client C</h4>
-      </div>
+  <h2>Client <span>Reviews</span></h2>
+  <div class="review-slider">
+    
+    <div class="review active">
+      <img class="client-pic" src="https://source.unsplash.com/random/100x100?woman" alt="Sarah Khan">
+      <p>"Working with Aamir has been a game-changer. The leads were high-quality and conversion rates improved drastically."</p>
+      <h4>— Sarah Khan</h4>
     </div>
-  </section>
+
+    <div class="review">
+      <img class="client-pic" src="https://pixabay.com/images/id-1004/" alt="David Lee">
+      <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
+      <h4>— David Lee</h4>
+    </div>
+
+    <div class="review">
+      <img class="client-pic" src="https://source.unsplash.com/random/100x100?female" alt="Fatima Rizwan">
+      <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
+      <h4>— Fatima Rizwan</h4>
+    </div>
+
+  </div>
+</section>
 
   <!-- ================= CONTACT ================= -->
   <section class="contact" id="contact">
