--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
   <div class="review-slider">
     
     <div class="review active">
-      <img class="client-pic" src="https://source.unsplash.com/random/100x100?woman" alt="Sarah Khan">
-      <p>"Working with Aamir has been a game-changer. The leads were high-quality and conversion rates improved drastically."</p>
-      <h4>— Sarah Khan</h4>
+      <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller">
+      <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
+      <h4> Ben Miller</h4>
     </div>
 
     <div class="review">
-      <img class="client-pic" src="https://pixabay.com/images/id-1004/" alt="David Lee">
+      <img class="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
       <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
-      <h4>— David Lee</h4>
+      <h4> James Elliott</h4>
     </div>
 
     <div class="review">
-      <img class="client-pic" src="https://source.unsplash.com/random/100x100?female" alt="Fatima Rizwan">
+      <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria">
       <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
-      <h4>— Fatima Rizwan</h4>
+      <h4> Saurab Khajuria</h4>
     </div>
 
   </div>
