--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     </div>
 
     <div class="review">
-      <img class="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
+      <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
       <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
       <h4> James Elliott</h4>
     </div>
