--- a/index.html
+++ b/index.html
@@ -108,67 +108,56 @@
   </section>
 
   <!-- ================= PORTFOLIO ================= -->
-  <section id="portfolio" class="portfolio">
-    <h2 class="section-title">My <span>Portfolio</span></h2>
-    <div class="portfolio-container">
+<section id="portfolio" class="portfolio">
+  <h2 class="section-title">My <span>Portfolio</span></h2>
+  <div class="portfolio-container">
 
-      <div class="portfolio-item" data-title="Project 1" data-desc="Description for Project 1">
-        <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Project 1">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item" data-title="Project 2" data-desc="Description for Project 2">
-        <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item" data-title="Project 3" data-desc="Description for Project 3">
-        <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item" data-title="Project 4" data-desc="Description for Project 4">
-        <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <!-- Hidden Projects -->
-      <div class="portfolio-item hidden" data-title="Project 5" data-desc="Aamir Shahzad">
-        <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item hidden" data-title="Project 6" data-desc="Aamir Shahzad">
-        <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item hidden" data-title="Project 7" data-desc="Aamir Shahzad">
-        <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
-        <div class="overlay">Click to view</div>
-      </div>
-
-      <div class="portfolio-item hidden" data-title="Project 8" data-desc="Aamir Shahzad">
-        <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
-        <div class="overlay">Click to view</div>
-      </div>
-
+    <div class="portfolio-item" data-title="Project 1" data-desc="Description for Project 1">
+      <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Project 1">
+      <div class="overlay">Click to view</div>
     </div>
-    <button id="seeMoreBtn" class="see-more">See More</button>
-  </section>
 
-  <!-- Modal -->
-  <div id="portfolioModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <img id="modalImg" src="" alt="Project Image">
-      <h3 id="modalTitle">Project Title</h3>
-      <p id="modalDesc">Project Description</p>
+    <div class="portfolio-item" data-title="Project 2" data-desc="Description for Project 2">
+      <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
+      <div class="overlay">Click to view</div>
     </div>
+
+    <div class="portfolio-item" data-title="Project 3" data-desc="Description for Project 3">
+      <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item" data-title="Project 4" data-desc="Description for Project 4">
+      <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <!-- Hidden Projects -->
+    <div class="portfolio-item hidden" data-title="Project 5" data-desc="Aamir Shahzad">
+      <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 6" data-desc="Aamir Shahzad">
+      <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 7" data-desc="Aamir Shahzad">
+      <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
+      <div class="overlay">Click to view</div>
+    </div>
+
+    <div class="portfolio-item hidden" data-title="Project 8" data-desc="Aamir Shahzad">
+      <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
+      <div class="overlay">Click to view</div>
+    </div>
+
   </div>
+  <button id="seeMoreBtn" class="see-more">See More</button>
 
-  <!-- ================= STATS ================= -->
-  <section class="counter-section" id="stats">
+  <!-- ================= STATS / ACHIEVEMENTS ================= -->
+  <div class="counter-section">
     <h2>My <span>Achievements</span></h2>
     <div class="counter-container">
       <div class="counter-box">
@@ -188,33 +177,43 @@
         <p>Certifications</p>
       </div>
     </div>
-  </section>
+  </div>
 
   <!-- ================= REVIEWS ================= -->
-  <section class="reviews" id="reviews">
-  <h2>Client <span>Reviews</span></h2>
-  <div class="review-slider">
-    
-    <div class="review active">
-      <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller">
-      <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
-      <h4> Ben Miller</h4>
-    </div>
+  <div class="reviews">
+    <h2>Client <span>Reviews</span></h2>
+    <div class="review-slider">
+      <div class="review active">
+        <img class="client-pic" src="https://i.postimg.cc/L80RHS3r/Ben-Miller.jpg" alt="Ben Miller">
+        <p>"Working with Aamir has been a game-changer. The leads were high-quality, and conversion rates improved drastically."</p>
+        <h4> Ben Miller</h4>
+      </div>
 
-    <div class="review">
-      <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
-      <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
-      <h4> James Elliott</h4>
-    </div>
+      <div class="review">
+        <img class="client-pic" src="https://i.postimg.cc/9FmjZ0x6/James-Elliott.jpg" alt="James Elliott">
+        <p>"Professional service, clear communication & excellent results. Highly recommend!"</p>
+        <h4> James Elliott</h4>
+      </div>
 
-    <div class="review">
-      <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria">
-      <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
-      <h4> Saurab Khajuria</h4>
+      <div class="review">
+        <img class="client-pic" src="https://i.postimg.cc/MTBj7dGp/Saurab-Khajuria.jpg" alt="Saurab Khajuria">
+        <p>"Very impressed with the research depth & responsiveness. My sales enquiries increased."</p>
+        <h4> Saurab Khajuria</h4>
+      </div>
     </div>
-
   </div>
 </section>
+
+<!-- Modal -->
+<div id="portfolioModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <img id="modalImg" src="" alt="Project Image">
+    <h3 id="modalTitle">Project Title</h3>
+    <p id="modalDesc">Project Description</p>
+  </div>
+</div>
+
 
   <!-- ================= CONTACT ================= -->
   <section class="contact" id="contact">
