--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
+    <div class="menu-toggle"><i class="fas fa-bars"></i></div>
   </nav>
 
   <!-- ================= HERO ================= -->
