--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
 <body>
 
   <!-- ================= PRELOADER ================= -->
-  <div id="preloader">
-    <div class="loader-square"></div>
-  </div>
+  <div class="measure"></div>
+
+<ul class="buttonCont">
+  <li class="button inkAnchor whtSlate_B">White Slate</li>
+  <li class="button inkAnchor honeyComb_B">Honey Comb</li>
+  <li class="button inkAnchor phosGreen-II_B">Phos. Green</li>
+  <li class="button inkAnchor gemBlue_B">Gem Blue</li>
+</ul>
+
+<div id="colorWrapper" class="gemBlue">
+  <div class="grid" id="cubeGrid"></div>
+</div>
+
+<div class="shadow flatShadow dropShadow"></div>
+
 
   <!-- ================= NAVBAR ================= -->
   <nav>
