--- a/index.html
+++ b/index.html
@@ -19,12 +19,29 @@
 </head>
 <body>
 
-  <!-- ================= PRELOADER ================= -->
+<!-- ================= PRELOADER ================= -->
 <div id="preloader">
-  <div id="colorWrapper" class="gemBlue">
-    <div class="grid" id="cubeGrid"></div>
+  <div class="grid">
+    <!-- 16 cubes banayenge -->
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
   </div>
 </div>
+
 
   <!-- ================= NAVBAR ================= -->
   <nav>
