--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     </div>
 
   </div>
-  <button id="seeMoreBtn" class="see-more">See More</button>
-
+  <button class="see-more-btn">See More</button>
+  
   <!-- ================= STATS / ACHIEVEMENTS ================= -->
   <div class="counter-section">
     <h2>My <span>Achievements</span></h2>
