--- a/index.html
+++ b/index.html
@@ -20,29 +20,36 @@
 <body>
 
 <!-- ================= PRELOADER ================= -->
-<div id="preloader">
-  <div class="grid">
-    <!-- 16 cubes banayenge -->
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
-    <div class="cube"><div class="lifter"><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div><div class="cube__face"></div></div></div>
+<div id="preloader" class="preloader-overlay">
+    <div class="cube-grid">
+      <!-- 4x4 Cubes with 6 faces each -->
+      <div class="cube">
+        <div class="face top"></div>
+        <div class="face bottom"></div>
+        <div class="face left"></div>
+        <div class="face right"></div>
+        <div class="face front"></div>
+        <div class="face back"></div>
+      </div>
+      <!-- Repeat for 16 cubes -->
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+      <div class="cube"><div class="face top"></div><div class="face bottom"></div><div class="face left"></div><div class="face right"></div><div class="face front"></div><div class="face back"></div></div>
+    </div>
   </div>
-</div>
-
-
+  
   <!-- ================= NAVBAR ================= -->
   <nav>
     <div class="logo">Aamir<span>Shahzad</span></div>
