--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <li><a href="#about">About</a></li>
       <li><a href="#services">Services</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="#certifications">Certifications</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -239,8 +240,27 @@
     <p id="modalDesc">Project Description</p>
   </div>
 </div>
-
-
+<!-- ================= CERTIFICATES ================= -->
+<section id="certifications" class="certifications">
+  <h2>My <span>Certifications</span></h2>
+  <div class="cert-container">
+    <div class="cert-item">
+      <h3>Google IT Support Professional Certificate</h3>
+      <p>Issued by: Google</p>
+      <a href="https://www.coursera.org/verify/certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+    </div>
+    <div class="cert-item">
+      <h3>Meta Front-End Developer Certificate</h3>
+      <p>Issued by: Meta</p>
+      <a href="https://www.coursera.org/verify/another-certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+    </div>
+    <div class="cert-item">
+      <h3>Data Analytics Professional Certificate</h3>
+      <p>Issued by: IBM</p>
+      <a href="https://www.coursera.org/verify/ibm-certificate-link-here" target="_blank" class="cert-link">View Certificate</a>
+    </div>
+    </div>
+</section>
   <!-- ================= CONTACT ================= -->
   <section class="contact" id="contact">
     <h2>Contact <span>Me</span></h2>
