--- a/index.html
+++ b/index.html
@@ -287,20 +287,22 @@
 
       <div class="footer-right">
         <div class="footer-col">
-          <h4>Contact</h4>
-          <ul>
-            <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i> +92 306 3337 925</a></li>
-            <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i> aamirsinfo@gmail.com</a></li>
-            <li><span><i class="fas fa-map-marker-alt"></i> Bahawalpur, Pakistan</span></li>
-          </ul>
-        </div>
-
-        <div class="footer-col">
           <h4>About</h4>
           <ul>
             <li><a href="about.html">My Story</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="#certifications">My Certificates</a></li>
+            <li><a href="https://linktr.ee/aamirinfo" target="_blank">My Social Media</a></li>
+          </ul>
+        </div>
+        
+        <div class="footer-col">
+          <h4>Contact</h4>
+          <ul>
+            <li><a href="tel:+923063337925"><i class="fas fa-phone-alt"></i> +92 306 3337 925</a></li>
+            <li><a href="mailto:aamirsinfo@gmail.com"><i class="fas fa-envelope"></i> aamirsinfo@gmail.com</a></li>
+            <li><span><i class="fas fa-map-marker-alt"></i> Bahawalpur, Pakistan</span></li>
           </ul>
         </div>
 
