--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         </ul>
       </div>
 
+      <div class="service-box">
+  <h3><i class="fas fa-search"></i> SEO & Content</h3>
+  <p>Optimizing your online presence to rank higher and attract organic traffic.</p>
+  <ul class="service-points">
+    <li><i class="fas fa-check-circle"></i> On-page & Off-page SEO</li>
+    <li><i class="fas fa-check-circle"></i> Keyword Research</li>
+    <li><i class="fas fa-check-circle"></i> Content Strategy</li>
+  </ul>
+</div>
+
     </div>
   </section>
 
@@ -138,50 +148,46 @@
 <section id="portfolio" class="portfolio">
   <h2 class="section-title">My <span>Portfolio</span></h2>
   <div class="portfolio-container">
-
-    <div class="portfolio-item" data-title="Project 1" data-desc="Description for Project 1">
-      <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Project 1">
-      <div class="overlay">Click to view</div>
+    <div class="portfolio-item">
+        <a href="lead-generation.html" class="portfolio-link">
+            <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
+            <div class="overlay">
+                <h3>Lead Generation</h3>
+                <p>Click for details</p>
+            </div>
+        </a>
     </div>
 
-    <div class="portfolio-item" data-title="Project 2" data-desc="Description for Project 2">
-      <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Project 2">
-      <div class="overlay">Click to view</div>
+    <div class="portfolio-item">
+        <a href="email-marketing.html" class="portfolio-link">
+            <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Email Marketing">
+            <div class="overlay">
+                <h3>Email Marketing</h3>
+                <p>Click for details</p>
+            </div>
+        </a>
     </div>
 
-    <div class="portfolio-item" data-title="Project 3" data-desc="Description for Project 3">
-      <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Project 3">
-      <div class="overlay">Click to view</div>
+    <div class="portfolio-item">
+        <a href="outreach.html" class="portfolio-link">
+            <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
+            <div class="overlay">
+                <h3>Outreach Campaigns</h3>
+                <p>Click for details</p>
+            </div>
+        </a>
     </div>
 
-    <div class="portfolio-item" data-title="Project 4" data-desc="Description for Project 4">
-      <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="Project 4">
-      <div class="overlay">Click to view</div>
+    <div class="portfolio-item">
+        <a href="seo.html" class="portfolio-link">
+            <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
+            <div class="overlay">
+                <h3>SEO Services</h3>
+                <p>Click for details</p>
+            </div>
+        </a>
     </div>
-
-    <!-- Hidden Projects -->
-    <div class="portfolio-item hidden" data-title="Project 5" data-desc="Aamir Shahzad">
-      <img src="https://i.postimg.cc/x8q6RxTB/Facebook-SS.png" alt="Project 5">
-      <div class="overlay">Click to view</div>
-    </div>
-
-    <div class="portfolio-item hidden" data-title="Project 6" data-desc="Aamir Shahzad">
-      <img src="https://i.postimg.cc/wBHFPTjX/Twitter-SS.png" alt="Project 6">
-      <div class="overlay">Click to view</div>
-    </div>
-
-    <div class="portfolio-item hidden" data-title="Project 7" data-desc="Aamir Shahzad">
-      <img src="https://i.postimg.cc/pTLCWG8y/instagram-ss.png" alt="Project 7">
-      <div class="overlay">Click to view</div>
-    </div>
-
-    <div class="portfolio-item hidden" data-title="Project 8" data-desc="Aamir Shahzad">
-      <img src="https://i.postimg.cc/8P6HzrFd/Medium-SS.png" alt="Project 8">
-      <div class="overlay">Click to view</div>
-    </div>
-
-  </div>
- <button id="seeMoreBtn" class="see-more-btn">See More</button>
+</div>
   
   <!-- ================= STATS / ACHIEVEMENTS ================= -->
   <div class="counter-section">
@@ -231,15 +237,6 @@
   </div>
 </section>
 
-<!-- Modal -->
-<div id="portfolioModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <img id="modalImg" src="" alt="Project Image">
-    <h3 id="modalTitle">Project Title</h3>
-    <p id="modalDesc">Project Description</p>
-  </div>
-</div>
 <!-- ================= CERTIFICATES ================= -->
 <section id="certifications" class="certifications">
   <h2>My <span>Certifications</span></h2>
@@ -432,27 +429,6 @@
       });
     });
 
-    // Portfolio Modal
-    const modal = document.getElementById("portfolioModal");
-    const modalImg = document.getElementById("modalImg");
-    const modalTitle = document.getElementById("modalTitle");
-    const modalDesc = document.getElementById("modalDesc");
-    const closeBtn = document.querySelector(".modal .close");
-    document.querySelectorAll(".portfolio-item").forEach(item => {
-      item.addEventListener("click", () => {
-        modal.style.display = "block";
-        modalImg.src = item.querySelector("img").src;
-        modalTitle.textContent = item.getAttribute("data-title");
-        modalDesc.textContent = item.getAttribute("data-desc");
-      });
-    });
-    closeBtn.addEventListener("click", () => modal.style.display = "none");
-
-    // See More Projects
-    document.getElementById("seeMoreBtn").addEventListener("click", () => {
-      document.querySelectorAll(".portfolio-item.hidden").forEach(p => p.classList.remove("hidden"));
-      document.getElementById("seeMoreBtn").style.display = "none";
-    });
   </script>
 </body>
 </html>
