--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
     </div>
 
     <div class="portfolio-item">
-        <a href="email-marketing.html" class="portfolio-link">
+        <a href="digital-marketing.html" class="portfolio-link">
             <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Email Marketing">
             <div class="overlay">
-                <h3>Email Marketing</h3>
+                <h3>Digital Marketing</h3>
                 <p>Click for details</p>
             </div>
         </a>
