--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
       </div>
 
       <div class="service-box">
-        <h3><i class="fas fa-envelope-open-text"></i> Email Marketing</h3>
-        <p>Campaigns designed to engage customers and increase sales.</p>
-        <ul class="service-points">
-          <li><i class="fas fa-check-circle"></i> Cold Email Outreach</li>
-          <li><i class="fas fa-check-circle"></i> Template Designing</li>
-          <li><i class="fas fa-check-circle"></i> Email List Cleaning</li>
-        </ul>
-      </div>
+  <h3><i class="fas fa-bullhorn"></i> Digital Marketing</h3>
+  <p>Comprehensive strategies to boost your online presence and grow your business.</p>
+  <ul class="service-points">
+    <li><i class="fas fa-check-circle"></i> Social Media Management</li>
+    <li><i class="fas fa-check-circle"></i> Content Marketing</li>
+    <li><i class="fas fa-check-circle"></i> Paid Advertising</li>
+  </ul>
+</div>
 
       <div class="service-box">
         <h3><i class="fas fa-laptop-code"></i> Web Research</h3>
@@ -150,40 +150,48 @@
   <div class="portfolio-container">
     <div class="portfolio-item">
         <a href="lead-generation.html" class="portfolio-link">
-            <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
-            <div class="overlay">
-                <h3>Lead Generation</h3>
-                <p>Click for details</p>
+            <div class="thumbnail">
+                <img src="https://i.postimg.cc/BZwWJ5ZQ/Screenshot-2025-08-16-120554.png" alt="Lead Generation">
+            </div>
+            <h3>Lead Generation</h3>
+            <div class="hover-text">
+                <p>See More Details</p>
             </div>
         </a>
     </div>
 
     <div class="portfolio-item">
         <a href="digital-marketing.html" class="portfolio-link">
-            <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Email Marketing">
-            <div class="overlay">
-                <h3>Digital Marketing</h3>
-                <p>Click for details</p>
+            <div class="thumbnail">
+                <img src="https://i.postimg.cc/j50HHFhd/Screenshot-2025-08-16-130718.png" alt="Digital Marketing">
+            </div>
+            <h3>Digital Marketing</h3>
+            <div class="hover-text">
+                <p>See More Details</p>
             </div>
         </a>
     </div>
 
     <div class="portfolio-item">
         <a href="outreach.html" class="portfolio-link">
-            <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
-            <div class="overlay">
-                <h3>Outreach Campaigns</h3>
-                <p>Click for details</p>
+            <div class="thumbnail">
+                <img src="https://i.postimg.cc/3rZXG90Y/Screenshot-2025-08-16-130606.png" alt="Outreach Campaigns">
+            </div>
+            <h3>Outreach Campaigns</h3>
+            <div class="hover-text">
+                <p>See More Details</p>
             </div>
         </a>
     </div>
 
     <div class="portfolio-item">
         <a href="seo.html" class="portfolio-link">
-            <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
-            <div class="overlay">
-                <h3>SEO Services</h3>
-                <p>Click for details</p>
+            <div class="thumbnail">
+                <img src="https://i.postimg.cc/CLQfC2hT/Screenshot-2025-09-01-094027-1000-rows.png" alt="SEO Services">
+            </div>
+            <h3>SEO Services</h3>
+            <div class="hover-text">
+                <p>See More Details</p>
             </div>
         </a>
     </div>
